--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,35 @@
-$accent-color: pink;
-
-* {
-  margin: 0;
-  padding: 0;
-}
+@import "~bootstrap/scss/bootstrap";
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;700&display=swap");
 
 body {
   min-height: 100vh;
-  background: $accent-color;
+}
+
+.card {
+  cursor: pointer;
+  transition: all 0.3s ease;
+  height: 200px;
+  overflow: hidden;
+
+  .title {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+
+  &-link {
+    text-decoration: none;
+  }
+
+  &:hover {
+    background-color: $primary;
+    color: $light;
+
+    .title {
+      color: $light !important;
+    }
+
+    .card-link {
+      color: $light;
+    }
+  }
 }
